--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,7 +10,6 @@
     {% set total = namespace(value=0) %}
 
     {% for id, qty in session["qty_dict"].items() %}
-    {% if qty != 0 %}
     <div class="cart-item">
         <img class="product-image" src="{{ url_for('static', filename="images/products/" ~id~ ".png") }}">
         <span class="product-name product-text">{{ session["items"][id | int]["name"] }}</span>
@@ -26,7 +25,6 @@
         </form>
         {% set total.value = (total.value + ( qty * session["items"][id | int]["price"] ) ) %}
         <span class="product-text total">Total:   ₹{{ qty * session["items"][id | int]["price"]}}</span>
-        {% endif %}
     </div>
     {% endfor %}
 </div>
@@ -34,13 +32,13 @@
 <div class="subtotal-div">
     <p class="subtotal">Sub total      :  ₹  {{total.value}}</p>
     <p class="GST">GST @12%   :  ₹  {{ (0.12 * total.value | int) | int}}</p>
-    <p class="GST">Net total      :  ₹  {{ (1.12 * total.value | int) | int}}</p>
+    <p class="subtotal">Net total      :  ₹  {{ (1.12 * total.value | int) | int}}</p>
 </div>
 
 <div class="end-buttons">
     <form method="POST">
         <a href="{{ url_for("receipt") }}" >
-        <input class="generate-receipt" type="button" value="GENERATE RECIEPT">
+        <input class="generate-receipt" type="button" value="GENERATE RECEIPT">
         </a>
         <input class="clear-cart" name="clear_cart" type="submit" value="CLEAR CART">
     </form>
