--- a/templates/empty receipt.html
+++ b/templates/empty receipt.html
@@ -7,5 +7,5 @@
 
 {% block body %}
 <img class="empty-image" src="{{ url_for("static", filename="images/empty.png") }}">
-<p class="empty-text">Your cart seems to be empty at the moment!</p>
+<p class="empty-text">Can not generate a receipt as your cart seems to be empty at the moment!</p>
 {% endblock %}
