--- a/static/item.css
+++ b/static/item.css
@@ -1,5 +1,5 @@
 .item-body {
-    width:1000px;
+    width: 1000px;
     height: 550px;
     margin-top: 120px;
     margin-left: 500px;
@@ -17,7 +17,7 @@
 
 .product-text {
     padding-left: 30px;
-    display:inline-block;
+    display: inline-block;
     color: black;
     font-family: "Calibri", Times, sans-serif;
 }
@@ -39,27 +39,37 @@
 
 #product-description {
     padding-top: 40px;
-    font-size:20px;
+    font-size: 20px;
 }
 
-#add-qty-button, #qty-drop-down{
+#add-qty-button, #qty-drop-down {
     font-family: "Calibri", Times, sans-serif;
-    color:white;
+    color: white;
     margin-top: 40px;
     margin-left: 30px;
     font-size: 30px;
 }
+
 #qty-drop-down {
     font-family: "Calibri", Times, sans-serif;
     border: 8px black;
     background-color: rebeccapurple;
     border: none;
+    text-shadow: 0 -1px 0 #000;
+    box-shadow: 0 0.5px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0, 0, 0, 0.6);
 }
-#add-qty-button{
+
+#add-qty-button {
     border-radius: 10px;
     background-color: #4CAF50;
     margin-left: 70px;
     border: none;
     text-align: center;
     display: inline-block;
+    box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0, 0, 0, 0.6);
+    text-shadow: 0 -1px 0 #000;
+}
+
+#add-qty-button:focus {
+    background-color: rgb(0, 100, 0);
 }
