--- a/templates/nav.html
+++ b/templates/nav.html
@@ -34,7 +34,12 @@
             <span class="cart-text-cart"><b>CART</b></span>
         </span>
     </a>
+
 </div>
+<div class="footer">
+    <p>Made by Amaan Raazi</p>
+</div>
+
 
 <script src="{{url_for('static', filename='nav.js')}}"></script>
 {% endblock %}
