--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,7 @@
     <title>InstaKirana</title>
     {% block head %} {% endblock %}
 </head>
-<body>{% block body %} {% endblock %}</body>
+<body>
+{% block body %} {% endblock %}
+</body>
 </html>
