--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <a href="/">
-    <img class="home" src="{{  url_for('static', filename='images/home.png') }}" alt="logo">
+    <img class="home" src="{{  url_for('static', filename='images/home.png') }}">
 </a>
 <div class="receipt-body">
 
